relocated CSS codes for better styling management, also fixed issue on the home page where the content is not scrollable when view height is too small

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+@import './Navbar.css';
+@import './Main.css';
+
 body {
     --dark-primary: #76ba99;
     --base-primary: #adcf9f;
@@ -90,285 +93,4 @@ body {
 a {
     color: inherit;
     text-decoration: none;
-}
-
-/*** NAVIGATION BAR ***/
-.navbar {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    background-color: var(--dark-primary);
-    padding: 0 1.5rem;
-    min-height: 3rem;
-    box-shadow: 0rem 0.3rem 0.5rem rgba(0, 0, 0, 0.3);
-    display: flex;
-    justify-content: space-between;
-    z-index: 1;
-}
-
-.navbar__logo {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
-
-.navbar__logo__image {
-    width: 4rem;
-    height: auto;
-}
-
-.navbar__logo__image:hover {
-    box-shadow: none;
-}
-
-.navbar__content {
-    display: flex;
-    align-items: center;
-}
-
-.navbar__content a {
-    padding: 0.5rem 1rem;
-    margin: 0.5rem;
-    border-top-left-radius: 1.5rem;
-    border-bottom-right-radius: 1.5rem;
-    box-shadow: var(--dark-primary-box-shadow);
-    transition: ease-in-out 300ms;
-    cursor: pointer;
-}
-
-.navbar__content a:focus {
-    box-shadow: var(--dark-primary-box-shadow-invert);
-}
-
-.navbar__content a:hover {
-    box-shadow: none;
-}
-
-/*** Main ***/
-.main {
-    max-width: 1000px;
-    margin: auto;
-    height: calc(100vh - 5rem);
-    display: flex;
-    align-items: center;
-    min-height: 50vh;
-}
-
-.main__card {
-    box-shadow: var(--base-primary-box-shadow);
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    margin-top: 7.5rem;
-    margin-left: 1rem;
-    min-width: 20rem;
-    max-width: 20rem;
-    height: 30rem;
-    border-radius: 1rem;
-}
-
-.main__image {
-    background-color: var(--base-primary);
-    box-shadow: var(--base-primary-box-shadow-invert);
-    height: auto;
-    width: 100%;
-    margin-top: -7.5rem;
-    border-radius: 2rem;
-    margin-right: auto;
-}
-
-.main__image__wrapper {
-    margin: 1.5rem;
-    overflow: hidden;
-    border-radius: 1rem;
-}
-
-.main__card__info {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 100%;
-}
-
-.main__card__link_container {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.main__card__links {
-    filter: var(--svg-color-filter);
-    flex-grow: 1;
-    height: 3rem;
-    width: auto;
-    margin: 1rem 0rem 0.5rem;
-}
-
-.main__card__links:hover {
-    opacity: 0.5;
-}
-
-.main__card__text {
-    font-size: 1.1rem;
-}
-
-.main__card__redirect {
-    display: flex;
-    width: 100%;
-}
-
-.main__card__button {
-    background: var(--light-primary);
-    box-shadow: none;
-    width: 50%;
-    text-align: center;
-    padding: 0.5rem 0.5rem;
-    border-radius: 0.5rem;
-    margin: 1rem 0.5rem 0 0;
-    transition: ease-in-out 300ms;
-}
-
-.main__card__button:hover {
-    box-shadow: var(--general-box-shadow-invert);
-}
-
-.main__intro {
-    flex-grow: 1;
-    margin-left: 2rem;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.main__intro__text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.main__intro__text h1 {
-    font-size: 6rem;
-}
-
-.main__intro__text div {
-    min-width: 300px;
-    max-width: 490px;
-    height: 10rem;
-}
-
-.main__intro__text .pop-up-texts {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 0.5rem;
-}
-
-.main__intro__text span {
-    display: inline;
-    background-color: var(--base-primary);
-    width: min-content;
-    padding: 0.1rem 0.5rem;
-    margin-right: 1rem;
-    margin-bottom: 1rem;
-    border-radius: 1rem;
-    font-size: 2rem;
-}
-
-.main__intro__text .special {
-    color: var(--base-primary);
-    animation: pop-and-go 5s linear;
-}
-
-@keyframes pop-and-go {
-    0% {
-        color: var(--base-primary);
-        box-shadow: none;
-        opacity: 0.3;
-    }
-    5% {
-        color: var(--text-color);
-        box-shadow: none;
-        opacity: 0.3;
-    }
-    15% {
-        color: var(--text-color);
-        box-shadow: none;
-        opacity: 0.3;
-    }
-    20% {
-        color: var(--text-color);
-        box-shadow: var(--base-primary-box-shadow);
-        opacity: 1;
-    }
-    80% {
-        color: var(--text-color);
-        box-shadow: var(--base-primary-box-shadow);
-        opacity: 1;
-    }
-    85% {
-        color: var(--text-color);
-        box-shadow: none;
-        opacity: 0.3;
-    }
-    100% {
-        color: var(--base-primary);
-        box-shadow: none;
-    }
-}
-
-.main__intro__projects {
-    display: grid;
-    grid-template-columns: auto auto;
-}
-
-.main__intro__project {
-    height: 100px;
-    width: 100px;
-}
-
-.project__container {
-    box-shadow: var(--base-primary-box-shadow-invert);
-    border-radius: 1rem;
-    margin: 1rem;
-    padding: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transition: 300ms ease-in-out;
-}
-
-.project__container:hover {
-    box-shadow: none;
-    cursor: pointer;
-}
-
-@media only screen and (max-width: 800px) {
-    .main {
-        width: 80%;
-        flex-direction: column;
-        overflow-y: visible;
-    }
-
-    .main__card {
-        margin-left: 0;
-    }
-
-    .main__intro {
-        text-align: center;
-        margin-left: 0;
-        padding-left: 0;
-        padding-right: 0;
-    }
-
-    .main__intro__text div {
-        height: 13rem;
-    }
-
-    .main__intro__text .pop-up-texts {
-        justify-content: center;
-    }
-
-    .main__intro__projects {
-    }
 }
